Issue #28295: Fixed the documentation and added tests for PyUnicode_AsUCS4(). Original patch by Xiang Zhang.